--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "cy:open": "cypress open"
+    "cy:open": "cypress open",
+    "cy:run-chrome": "cypress run --browser chrome",
+    "cy:run-firefox": "cypress run --browser firefox",
+    "cy:run-electron": "cypress run --browser electron",
+    "cy:update-snapshot": "cypress run --env updateSnapshots=true"
   },
   "author": "Sim Tran",
   "license": "ISC",
